@@ -3,12 +3,16 @@ package fr.inria.verveine.extractor.java;
 import ch.akuhn.fame.Repository;
 import fr.inria.verveine.extractor.java.utils.Util;
 import org.moosetechnology.model.famixjava.famixjavaentities.Enum;
+import org.moosetechnology.model.famixjava.famixjavaentities.Package;
 import org.moosetechnology.model.famixjava.famixjavaentities.*;
 import org.moosetechnology.model.famixjava.famixtraits.*;
 
 import java.lang.Class;
 import java.lang.Exception;
-import java.util.*;
+import java.util.Collection;
+import java.util.Hashtable;
+import java.util.LinkedList;
+import java.util.Map;
 
 /**
  * A dictionnary of Famix entities to help create them and find them back
@@ -198,7 +202,7 @@ public class AbstractDictionary<B> {
 		}
 		
 		try {
-			fmx = fmxClass.newInstance();
+			fmx = fmxClass.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			System.err.println("Unexpected error, could not create a FAMIX entity: "+e.getMessage());
 			e.printStackTrace();
@@ -289,6 +293,20 @@ public class AbstractDictionary<B> {
 		return fmx;
 	}
 
+		/**
+	 * Returns a FAMIX Interface with the given <b>name</b>, creating it if it does not exist yet.
+	 * @param key to which the entity will be mapped (may be null, but then it will be difficult to recover the entity)
+	 * @param name -- the name of the FAMIX Method (MUST NOT be null, but this is not checked)
+	 * @param owner -- type defining the method (should not be null, but it will work if it is) 
+	 * @param persistIt -- whether the Class should be persisted in the Famix repository
+	 * @return the FAMIX Class or null in case of a FAMIX error
+	 */
+	public Interface ensureFamixInterface(B key, String name, ContainerEntity owner, boolean persistIt) {
+		Interface fmx = ensureFamixEntity(Interface.class, key, name, persistIt);
+		fmx.setTypeContainer(owner);
+		return fmx;
+	}
+
 	/**
 	 * Returns a FAMIX ParameterizableClass with the given <b>name</b>, creating it if it does not exist yet
 	 * In the second case, sets some default properties: not Abstract, not Final, not Private, not Protected, not Public, not Interface
@@ -302,13 +320,26 @@ public class AbstractDictionary<B> {
 		return fmx;
 	}
 
+		/**
+	 * Returns a FAMIX ParameterizableInterface with the given <b>name</b>, creating it if it does not exist yet
+	 * In the second case, sets some default properties: not Abstract, not Final, not Private, not Protected, not Public, not Interface
+	 * @param name -- the name of the FAMIX Class
+	 * @param persistIt -- whether the ParameterizableInterface should be persisted in the Famix repository
+	 * @return the FAMIX Class or null in case of a FAMIX error
+	 */
+	public ParameterizableInterface ensureFamixParameterizableInterface(B key, String name, ContainerEntity owner, boolean persistIt) {
+		ParameterizableInterface fmx = ensureFamixEntity(ParameterizableInterface.class, key, name, persistIt);
+		fmx.setTypeContainer(owner);
+		return fmx;
+	}
+
 	/**
 	 * Returns a FAMIX ParameterizableType with the given <b>name</b>, creating it if it does not exist yet
 	 * @param name -- the name of the FAMIX Type
 	 * @param persistIt -- whether the ParameterizableClass should be persisted in the Famix repository
 	 * @return the FAMIX ParameterizableType or null in case of a FAMIX error
 	 */
-	public ParameterizedType ensureFamixParameterizedType(B key, String name, ParameterizableClass generic, ContainerEntity owner, boolean persistIt) {
+	public ParameterizedType ensureFamixParameterizedType(B key, String name, TWithParameterizedTypes generic, ContainerEntity owner, boolean persistIt) {
 		ParameterizedType fmx = ensureFamixEntity(ParameterizedType.class, key, name, persistIt);
 		fmx.setTypeContainer(owner);
 		fmx.setParameterizableClass(generic);
@@ -396,7 +427,7 @@ public class AbstractDictionary<B> {
 	 * @return the FAMIX Method or null in case of a FAMIX error
 	 */
 	public Method ensureFamixMethod(B key, String name, String sig, Type ret, Type owner, boolean persistIt) {
-		Method fmx = (Method) ensureFamixEntity(Method.class, key, name, persistIt);
+		Method fmx = ensureFamixEntity(Method.class, key, name, persistIt);
 		fmx.setSignature(sig);
 		fmx.setDeclaredType(ret);
 		fmx.setParentType(owner);
@@ -459,7 +490,7 @@ public class AbstractDictionary<B> {
 		
 		if ( (cmt != null) && (owner != null) ) {
 			fmx = createFamixComment(cmt);
-			fmx.setContainer(owner);
+			fmx.setContainer((TWithComments) owner);
 		}
 		return fmx;
 	}
@@ -493,7 +524,7 @@ public class AbstractDictionary<B> {
 		if ( (sup == null) || (sub == null) ) {
 			return null;
 		}
-			
+
 		for (TInheritance i : (sup).getSubInheritances()) {
 			if (i.getSubclass() == sub) {
 				return (Inheritance) i;
@@ -501,10 +532,35 @@ public class AbstractDictionary<B> {
 		}
 		Inheritance inh = new Inheritance();
 		inh.setSuperclass(sup);
-		inh.setSubclass((TWithInheritances) sub);
-		chainPrevNext(prev,inh);
+		inh.setSubclass(sub);
+		chainPrevNext(prev, inh);
 		famixRepoAdd(inh);
 		return inh;
+	}
+
+		/**
+	 * Returns a Famix Inheritance relationship between two Famix Classes creating it if needed
+	 * @param sup -- the super class
+	 * @param sub -- the sub class
+	 * @param prev -- previous inheritance relationship in the same context
+	 * @return the Inheritance relationship
+	 */
+	public Implementation ensureFamixImplementation(TImplementable myInterface, TCanImplement implementingClass, TAssociation prev) {
+		if ( (myInterface == null) || (implementingClass == null) ) {
+			return null;
+		}
+
+		for (TImplementation i : (myInterface).getImplementations()) {
+			if (i.getImplementingClass() == implementingClass) {
+				return (Implementation) i;
+			}
+		}
+		Implementation implementation = new Implementation();
+		implementation.setImplementingClass(implementingClass);
+		implementation.setMyInterface(myInterface);
+		chainPrevNext(prev, implementation);
+		famixRepoAdd(implementation);
+		return implementation;
 	}
 
 	/**
@@ -553,7 +609,7 @@ public class AbstractDictionary<B> {
 		Invocation invok = new Invocation();
 		invok.setReceiver(receiver);
 		invok.setSender(sender);
-		invok.setSignature((signature== null) ? invoked.getSignature() : signature);
+		invok.setSignature((signature == null) ? invoked.getSignature() : signature);
 		invok.addCandidates(invoked);
 		chainPrevNext(prev,invok);
 		famixRepoAdd(invok);
@@ -742,20 +798,22 @@ public class AbstractDictionary<B> {
 	/**
 	 * Returns a FAMIX Namespace with the given <b>name</b>, creating it if it does not exist yet
 	 * We assume that Namespaces must be uniq for a given name
+	 *
 	 * @param name -- the name of the FAMIX Namespace
 	 * @return the FAMIX Namespace or null in case of a FAMIX error
 	 */
-	public Namespace ensureFamixNamespace(B key, String name) {
-		return ensureFamixUniqEntity(Namespace.class, key, name);
+	public Package ensureFamixPackage(B key, String name) {
+		return ensureFamixUniqEntity(Package.class, key, name);
 	}
 
 	/**
 	 * Creates or recovers a default Famix Namespace.
 	 * Because this package does not really exist, it has no binding.
+	 *
 	 * @return a Famix Namespace
 	 */
-	public Namespace ensureFamixNamespaceDefault() {
-		Namespace fmx =  ensureFamixUniqEntity(Namespace.class, null, DEFAULT_PCKG_NAME);
+	public Package ensureFamixPackageDefault() {
+		Package fmx = ensureFamixUniqEntity(Package.class, null, DEFAULT_PCKG_NAME);
 
 		return fmx;
 	}
@@ -767,7 +825,7 @@ public class AbstractDictionary<B> {
 	public org.moosetechnology.model.famixjava.famixjavaentities.Class ensureFamixClassStubOwner() {
 		org.moosetechnology.model.famixjava.famixjavaentities.Class fmx =  ensureFamixUniqEntity(org.moosetechnology.model.famixjava.famixjavaentities.Class.class, null, STUB_METHOD_CONTAINER_NAME);
 		if (fmx != null) {
-			fmx.setTypeContainer( ensureFamixNamespaceDefault());
+			fmx.setTypeContainer( ensureFamixPackageDefault());
 		}
 
 		return fmx;
